# django-deepshoes

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_ped_pro_pedido_alter_ped_pro_produto.py  0002_alter_pedido_data_entrega.py  0002_cor_endereco_forma_pagamento_marca_ped_pro_tamanho_and_more.py  0002_remove_pedido_itens_itenscompra_and_more.py  0003_alter_pedido_qtd_parcela.py  0003_remove_pedido_itens_produto_pedidos.py  0003_usuario_staff_alter_pedido_data_pedido.py  0004_alter_avaliacao_produto_avaliado.py  0004_remove_produto_pedidos_itenscompra_and_more.py  0005_alter_itenscompra_produto.py  0005_rename_produto_avaliado_avaliacao_produto.py  0006_ped_pro_pedido_itens_ped_pro_pedido_ped_pro_produto_and_more.py  0006_remove_pedido_preco_total.py  0007_pedido_preco_final.py  0007_remove_pedido_itens_itenscompra_and_more.py
core/models/: __init__.py  avaliacao.py  cartao.py  cor.py  endereco.py  forma_pagamento.py  itens_compra.py  marca.py  pedido.py  produto.py  tamanho.py  usuario.py
core/paginations/: avaliacao.py  produto.py
core/serializers/: __init__.py  avaliacao.py  cartao.py  cor.py  endereco.py  forma_pagamento.py  itens_compra.py  marca.py  pedido.py  produto.py  tamanho.py  usuario.py
core/views/: __init__.py  avaliacao.py  carrinho.py  cartao.py  cor.py  endereco.py  forma_pagamento.py  itens_compra.py  marca.py  pedido.py  produto.py  tamanho.py  usuario.py
projeto/: settings.py  urls.py
